--- a/public/css/style.css
+++ b/public/css/style.css
@@ -670,7 +670,7 @@ hr.separator {
 
 /****banner contact form**/
 .home-contact {
-  background: url(../images/bg-2.jpg) no-repeat;
+  background: url(../images/original.jpg) no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
