--- a/public/css/style-old.css
+++ b/public/css/style-old.css
@@ -556,7 +556,7 @@ hr.separator {
 
 /****banner contact form**/
 .home-contact {
-  background: url(../images/bg-2.jpg) no-repeat;
+  background: url(../images/ku-xlarge.jpg) no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
