--- a/public/css/style.css
+++ b/public/css/style.css
@@ -683,7 +683,7 @@ hr.separator {
 }
 /****banner contact form**/
 .home-contact {
-  background: url(../images/original.jpg) no-repeat;
+  background: url(../images/old-young-holding-hands.jpg) no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
